# deflector

./: LICENSE  README.md  pyproject.toml
deflector/: __init__.py
deflector/cli/: main.py
deflector/config/: each.py  identation.py
deflector/helpers/: after_each.py  before_each.py  describe.py  it.py
deflector/models/: each.py
deflector/models/affirm/: __init__.py
deflector/models/assertion/: __init__.py  assertion_error.py
deflector/modules/: __init__.py
deflector/modules/essentials/: affirm.py
deflector/services/: affirm.py
deflector/utils/: colors.py
sentinel/: __init__.py
sentinel/cli/: main.py
sentinel/helpers/: after_each.py  before_each.py  describe.py  it.py
sentinel/models/assertion/: __init__.py
sentinel/models/ensure/: __init__.py
sentinel/modules/: __init__.py
sentinel/modules/essentials/: affirm.py  ensure.py
sentinel/services/: affirm.py  ensure.py
sentinel/utils/: errors.py  execute_function.py
tests/: test_sync_file1.py
tests/my_path/: test_async_file1.py
